--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@types/jquery": "^3.5.14",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.1",
     "lottie-web": "^5.9.6",
     "ngx-lottie": "^10.0.0",
     "rxjs": "~7.5.0",
